# facebook_academic

./: .gitignore  Bookface.cpp  Bookface.h  CMakeLists.txt  Date.cpp  Date.h  Exceptions.h  FanPage.cpp  FanPage.h  FanPageArray.cpp  FanPageArray.h  FriendArray.cpp  FriendArray.h  FriendPage.cpp  FriendPage.h  ImageStatus.cpp  ImageStatus.h  Menu.cpp  Menu.h  Page.cpp  Page.h  Status.cpp  Status.h  StatusArray.cpp  StatusArray.h  UserInterface.cpp  UserInterface.h  Utilities.cpp  Utilities.h  VideoStatus.cpp  VideoStatus.h  friend_page.cpp  friend_page.h  main.cpp  page.cpp  page.h  projectOverview.drawio  readme.txt
